Read Update Patient

--- a/Patient/templates/patient/Update4CRC.html
+++ b/Patient/templates/patient/Update4CRC.html
@@ -7,22 +7,23 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-lg-8 p-r-0 title-margin-right">
+    <div class="my-3 p-3 bg-body rounded shadow-sm">
         <h4 class="text-uppercase">รายชื่อผู้ป่วย</h4>
         <p>
             <small> {% now "SHORT_DATE_FORMAT" %} <span id="clock"></span></small>
         </p>
     </div>
-</div>
-
-<div class="row">
-    <div class="col-lg-8 p-r-0 title-margin-right">
+    <div class="my-3 p-3 bg-body rounded shadow-sm">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form }}
             <input type="submit" value="Update">
         </form>
     </div>
+
+    
+
+
 </div>
 
 
