--- a/Patient/templates/patient/ListAFCMO.html
+++ b/Patient/templates/patient/ListAFCMO.html
@@ -8,12 +8,12 @@
 
 <div class="container">
     <div class="table-responsive">
-      Base {{ request.user }}
+      AFCMO {{ request.user }}
       <table class="table table-striped table-bordered">
         <thead>
           <tr>
             <th>Date</th>
-            <th>FullName</th>
+            <th>FullName (Gender)</th>
             <th>อายุ</th>
             <th>หน่วยงาน</th>
             <th>Positive เมื่อ</th>
@@ -27,7 +27,7 @@
           {% for partient in object_list %}
           <tr>
             <td>{{ partient.Date| thaidate:"d M y" }}</td>
-            <td>{{ partient.FullName }} </td>
+            <td>{{ partient.FullName }} ({{ partient.get_Gender_display }}) </td>
             <td>{{ partient.Age }}</td>
             <td>
                 {% if partient.IsAirforce  %}
@@ -37,19 +37,12 @@
             </td>
             <td>{{ partient.DatePositive }}</td>
             <td>{{ partient.CurrentThreatment }}</td>
-            <td> 
-              <i class="far fa-edit"></i> 
-
-                <i class="fas fa-battery-full 2x" style="color:green"></i>
-                <i class="fas fa-battery-half" style="color:yellow"></i>
-                <i class="fas fa-battery-quarter" style="color:yellow"></i>
-
-               ( {{ partient.LestestStatus }})
-            </td>
+            <td>{{ partient.CurrentStatus }} ( {{ partient.LestestStatus }})</td>
             <td>{{ partient.Mobile }}</td>
             <td>
                 <a href = '#'class="btn  btn-sm btn-primary" role="button" >view</a>                
-                <a href = '{% url 'Patient:UpdateFB' partient.id %}' class="btn  btn-sm btn-warning" role="button" >แก้ไข</a>                
+                <a href = '{% url 'Patient:Update' partient.id %}' class="btn  btn-sm btn-warning" role="button" >แก้ไข</a> 
+               
             </td>
           </tr>
           {% endfor %}
