--- a/templates/_base.html
+++ b/templates/_base.html
@@ -113,9 +113,10 @@
 
 
     <div class="content-wrap">
-        {% block content %}
+        
         <div class="main">
             <div class="container-fluid">
+                {% block content %}
                 <div class="row">
                     <div class="col-lg-8 p-r-0 title-margin-right">
                         <div class="page-header">
@@ -431,11 +432,14 @@
                         </div>
                     </div>
                 </section>
+                {% endblock %}
             </div>
         </div>
-        {% endblock %}
+        
     </div>
 
+    
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- jquery vendor -->
     <script src="{% static 'assets/js/lib/jquery.min.js' %}"></script>
     <script src="{% static 'assets/js/lib/jquery.nanoscroller.min.js' %}"></script>
