--- a/templates/_base.html
+++ b/templates/_base.html
@@ -101,7 +101,7 @@
 
                         <div class="dropdown dib">
                             <div class="header-icon" data-toggle="dropdown">
-                                <i class="ti-power-off"></i>
+                                <a href = "{% url 'logout' %}"><i class="ti-power-off"></i></a>
                             </div>
                         </div>
 
