--- a/Patient/templates/patient/List.html
+++ b/Patient/templates/patient/List.html
@@ -36,7 +36,7 @@
                 {{ partient.Office}} 
             </td>
             <td>{{ partient.DatePositive }}</td>
-            <td>{{ partient.CurrentThreatment }}</td>
+            <td>{{ partient.get_CurrentTreatment_display }}</td>
             <td> 
               <i class="far fa-edit"></i> 
 
@@ -44,7 +44,7 @@
                 <i class="fas fa-battery-half" style="color:yellow"></i>
                 <i class="fas fa-battery-quarter" style="color:yellow"></i>
 
-               ( {{ partient.LestestStatus }})
+               ( {{ partient.get_Status_display }})
             </td>
             <td>{{ partient.Mobile }}</td>
             <td>
