--- a/templates/_base.html
+++ b/templates/_base.html
@@ -60,7 +60,7 @@
                         </a>
                     </li>
 
-                    <li><a href="app-event-calender.html"><i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                    <li><a href="{% url 'Patient:Infect'%}"><i class="fa fa-user-circle-o" aria-hidden="true"></i>
                             ผู้ติดเชื้อ </a></li>
 
                     <li><a href="app-event-calender.html"><i class="fa fa-random" aria-hidden="true"></i>
