--- a/Patient/templates/patient/AddNew.html
+++ b/Patient/templates/patient/AddNew.html
@@ -7,13 +7,16 @@
 {% block content %}
 
 <div class="row">
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
+    <div class="col-12">
         <h4 class="text-uppercase">เพิ่มผู้ป่วย</h4>
     </div>
-    <div class="my-3 p-3 bg-body rounded shadow-sm">
-        <form method="post" enctype="multipart/form-data">{% csrf_token %}
+</div>
+<div class="row">
+    <div class = "col-6">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
             {{ form }}
-            <input type="submit" value="Add">
+            <input class="btn btn-primary" type="submit" value="Submit">
         </form>
     </div>
 </div>
