--- a/Patient/templates/patient/detail.html
+++ b/Patient/templates/patient/detail.html
@@ -7,7 +7,6 @@
 {% block content %}
 
 <div class="container">
-   
           วันที่ : {{ Patient.Date }}<br>
           ผู้บันทึก : {{ Patient.DataUser }}<br>
           ชื่อผู้ป่วย: {{ Patient.FullName }}<br>
@@ -49,7 +48,7 @@
         </div>
 
       </div>
-    <input type = "submit">
+    <input class="btn btn-primary" type="submit" value="Submit">
   </form>
 </div>
 
