fig logout button

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -109,8 +109,8 @@
                         </div>
 
                         <div class="dropdown dib">
-                            <div class="header-icon" data-toggle="dropdown">
-                                <a href = "/logout"><i class="ti-power-off"></i></a>
+                            <div class="header-icon">
+                                <a href = "{% url 'logout' %}"><i class="ti-power-off"></i></a>
                             </div>
                         </div>
 
