--- a/Patient/templates/patient/Update.html
+++ b/Patient/templates/patient/Update.html
@@ -2,25 +2,19 @@
 {% load static %}
 {% load thaidate %}
 
-{% block title %}แก้ไขผู้ป่วย{% endblock %}
+{% block title %}แก้ไขข้อมูลผู้ป่วย{% endblock %}
 
 {% block content %}
 
-<div class="row">
-    <div class="col-lg-8 p-r-0 title-margin-right">
-        <h4 class="text-uppercase">รายชื่อผู้ป่วย</h4>
-        <p>
-            <small> {% now "SHORT_DATE_FORMAT" %} <span id="clock"></span></small>
-        </p>
-    </div>
-</div>
 
 <div class="row">
     <div class="col-lg-8 p-r-0 title-margin-right">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Update">
+            <table class="table">
+            {{ form.as_table }}
+            </table>
+            <input class="btn btn-primary" type="submit" value="Submit">
         </form>
     </div>
 </div>
