--- a/templates/_base.html
+++ b/templates/_base.html
@@ -38,7 +38,7 @@
         <div class="nano">
             <div class="nano-content">
                 <ul>
-                    <div class="logo"><a href="index.html">
+                    <div class="logo"><a href="{% url 'Patient:List' %}">
                             <img class="pic" src="{% static 'assets/images/RTAF.png' %}" alt="" /><span>AFCOVID</span>
                             <style>
                                 .pic {
